overflow issue

--- a/assets/css/girlscout.css
+++ b/assets/css/girlscout.css
@@ -4,6 +4,8 @@
 .width {
 	margin:auto;
 	overflow-x: hidden;
+	max-width: 100%;
+	position: relative;
 }
 
 .color {
